crates/pack/tests/compile_fail/proposed_fact_struct_literal.stderr
error[E0451]: fields `payload` and `confidence` of struct `ProposedFact` are private
  --> tests/compile_fail/proposed_fact_struct_literal.rs:12:9
   |
 9 |     let _pf = ProposedFact {
   |               ------------ in this type
...
12 |         payload: unreachable!(),
   |         ^^^^^^^ private field
13 |         confidence: UnitInterval::ONE,
   |         ^^^^^^^^^^ private field

error: trait `fact::ErasedFactPayload` is private
  --> tests/compile_fail/proposed_fact_struct_literal.rs:12:18
   |
12 |         payload: unreachable!(),
   |                  ^^^^^^^^^^^^^^ private trait
